# viralsnipai-prod

./: .env.example  .env.staging.example  .eslintrc.js  .gitignore  CLEANUP_SUMMARY.md  OPENROUTER_SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
apps/cv-worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/cv-worker/app/: __init__.py  config.py  dependencies.py  detectors.py  main.py  scene_detection.py  schemas.py  services.py  tracking.py  video_utils.py
apps/cv-worker/tests/: test_contracts.py
docs/: AGENT_EDITOR_GUIDE.md  AGENT_EXECUTION_BOARD.active.md  CAPTION_ANIMATION_SYSTEM.md  CODEBASE_CLEANUP_AUDIT.md  CODEBASE_CLEANUP_EXECUTION_SUMMARY.md  COMMERCIAL_LIMITS_MATRIX.md  DEBUGGING_AGENT_EDITOR.md  EXPERIENCE_STANDARDS.md  FEATURE_FLAG_POLICY.md  FEATURE_IMPLEMENTATION_PLAN.md  KEYWORD_RESEARCH_REALWORLD_PLAN.md  KEYWORD_RESEARCH_UPGRADE_PRD.md  LAUNCH_VERSIONS.md  MASTER_PRD.md  MEDIA_CV_REMOTION_UPGRADE_TRACKING.md  OPENROUTER_MODEL_ROUTING.md  PHASE10_PLATFORM_QA.md  PRD_Audit_Migration_plan.md  PRD_Clippers.md  PRD_ViralSnipAI.md  PRIVACY_COMPLIANCE_BASELINE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SETUP.md  RAZORPAY_BILLING_SETUP_2026-03-08.md  RAZORPAY_ONLY_BILLING_CUTOVER_PLAN_2026-03-11.md  README.md  REPURPOSE_OS_ARCHITECTURE_PRD.md  SCRIPT_TTS_FEATURE_PLAN.md  SMART_REFRAME_PHASE_1.md  SMART_REFRAME_PHASE_2_DYNAMIC_TRACKING.md  SNIPRADAR_COMPETITOR_GAP_ANALYSIS_2026-03-06.md  SNIPRADAR_EXECUTION_PLAN_2026-03-06.md  SNIPRADAR_LAUNCH_PLAYBOOK.md  (+31 more)
(+1049 files in other folders)
