[project]
name = "viralsnipai-cv-worker"
version = "0.1.0"
description = "Computer vision worker for ViralSnipAI media analysis"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "opencv-python-headless==4.10.0.84",
  "onnxruntime==1.20.1",
  "mediapipe==0.10.18",
  "scenedetect[opencv]==0.6.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
